nfs/vpc-nfs.yaml
Outputs:
  VpcId:
    Value:
      Ref: "VPC"
    Export:
      Name:
        Fn::Sub: "${ProjectName}-VPCID"
  PrivateSubnets:
    Value:
      Ref: "PrivateSubnet1"
    Export:
      Name:
        Fn::Sub: "${ProjectName}-PrivateSubnets"
  LambdaSecurityGroupId:
    Value:
      Ref: "LambdaSecurityGroup"
    Export:
      Name:
        Fn::Sub: "${ProjectName}-LambdaSG"
  MountTargetSecurityGroupId:
    Value:
      Ref: "EC2SecurityGroup"
    Export:
      Name:
        Fn::Sub: "${ProjectName}-MountTargetSG"

AWSTemplateFormatVersion: "2010-09-09"
Description: "Serverless VPC with single AZ (Minimal cost)"
Parameters:
  VpcCidr:
    Default: "10.0.0.0/16"
    Type: "String"
    Description: "CIDR block for the VPC"
  PrivateSubnet1Cidr:
    Default: "10.0.10.0/24"
    Type: "String"
  ProjectName:
    Default: "dev-gassyuku"
    Type: "String"
    Description: "Project name for tagging"
Resources:
  PrivateRouteTable:
    Properties:
      VpcId:
        Ref: "VPC"
      Tags:
      - Value:
          Fn::Sub: "${ProjectName}-private-rt"
        Key: "Name"
    Type: "AWS::EC2::RouteTable"
  LambdaSecurityGroup:
    Properties:
      GroupDescription: "Security group for Lambda functions"
      VpcId:
        Ref: "VPC"
      Tags:
      - Value:
          Fn::Sub: "${ProjectName}-lambda-sg"
        Key: "Name"
    Type: "AWS::EC2::SecurityGroup"
  PrivateSubnet1:
    Properties:
      CidrBlock:
        Ref: "PrivateSubnet1Cidr"
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs: ""
      VpcId:
        Ref: "VPC"
      Tags:
      - Value:
          Fn::Sub: "${ProjectName}-private-1"
        Key: "Name"
    Type: "AWS::EC2::Subnet"
  S3Endpoint:
    Properties:
      VpcEndpointType: "Gateway"
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
        - Resource:
          - Fn::Sub: "arn:aws:s3:::*"
          Condition:
            StringEquals:
              s3:ResourceAccount:
                Fn::Sub: "${AWS::AccountId}"
          Effect: "Allow"
          Action: "s3:*"
          Principal: "*"
      VpcId:
        Ref: "VPC"
      ServiceName:
        Fn::Sub: "com.amazonaws.${AWS::Region}.s3"
      RouteTableIds:
      - Ref: "PrivateRouteTable"
    Type: "AWS::EC2::VPCEndpoint"
  VPC:
    Properties:
      CidrBlock:
        Ref: "VpcCidr"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Value:
          Fn::Sub: "${ProjectName}-vpc"
        Key: "Name"
    Type: "AWS::EC2::VPC"
  PrivateSubnet1Association:
    Properties:
      SubnetId:
        Ref: "PrivateSubnet1"
      RouteTableId:
        Ref: "PrivateRouteTable"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
  EC2SecurityGroup:
    UpdateReplacePolicy: "Delete"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Delete"
    Properties:
      GroupDescription: "Connect S3 NFS to Lambda"
      GroupName: "ConnectS3Lambda"
      VpcId: !Ref VPC
      Tags:
      - Value: "NFS mount"
        Key: "Name"

  LambdaToMountTargetEgress:
    Type: "AWS::EC2::SecurityGroupEgress"
    DeletionPolicy: "Delete"
    UpdateReplacePolicy: "Delete"
    Properties:
      GroupId: !Ref LambdaSecurityGroup
      IpProtocol: "tcp"
      FromPort: 2049
      ToPort: 2049
      DestinationSecurityGroupId: !Ref EC2SecurityGroup

  MountTargetFromLambdaIngress:
    Type: "AWS::EC2::SecurityGroupIngress"
    DeletionPolicy: "Delete"
    UpdateReplacePolicy: "Delete"
    Properties:
      GroupId: !Ref EC2SecurityGroup
      IpProtocol: "tcp"
      FromPort: 2049
      ToPort: 2049
      SourceSecurityGroupId: !Ref LambdaSecurityGroup
